package ch.hslu.cas.msed.blobfish.board.ui;

public interface FieldRenderer {

    String render(UiField field);
}
