@startuml

class ch.hslu.cas.msed.blobfish.board.ChessBoard {
	{field} {static} -STARTPOSITION_FEN : String
	{field} -board : com.github.bhlangonijr.chesslib.Board
	{method} +boardToArray () : [Lch.hslu.cas.msed.blobfish.base.Piece;
	{method} +doMove ( paramString1 : String ) : ch.hslu.cas.msed.blobfish.board.ChessBoard
	{method} +getFen () : String
	{method} +getSideToMove () : ch.hslu.cas.msed.blobfish.base.PlayerColor
	{method} +isCapture ( paramMove1 : com.github.bhlangonijr.chesslib.move.Move ) : boolean
	{method} +isEndGame () : boolean
	{method} +isGameOver () : boolean
	{method} +isMated () : boolean
	{method} +isMoveLegal ( paramString1 : String ) : boolean
	{method} +legalMoves () : java.util.List
}


class ch.hslu.cas.msed.blobfish.board.ui.AlphanumericBorderFieldRenderer {
	{field} {static} +BG_COLOR : String
	{field} {static} +FG_COLOR : String
	{field} {static} +PLACEHOLDER_CHARACTER : char
	{field} {static} +PLACEHOLDER_COLOR : String
	{field} {static} +RESET : String
	{field} {static} +ROW_STRING_WHITE : String
	{method} +renderColumnField ( paramint1 : int ) : String
	{method}  {static} -renderEmptyField () : String
	{method} +renderRow ( paramPlayerColor1 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
	{method}  {static} -renderRowString ( paramPlayerColor1 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
}


class ch.hslu.cas.msed.blobfish.board.ui.BoardRenderer {
	{method} ~render ( paramUiBoard1 : ch.hslu.cas.msed.blobfish.board.ui.UiBoard , paramPlayerColor2 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
}


interface ch.hslu.cas.msed.blobfish.board.ui.BorderFieldRenderer {
	{method}  {abstract} +renderColumnField ( paramint1 : int ) : String
	{method}  {abstract} +renderRow ( paramPlayerColor1 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
}


class ch.hslu.cas.msed.blobfish.board.ui.ChessBoardRenderer {
	{field} -parser : ch.hslu.cas.msed.blobfish.board.ui.FenUiBoardParser
	{method} +render ( paramString1 : String , paramPlayerColor2 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
}


interface ch.hslu.cas.msed.blobfish.board.ui.FieldRenderer {
	{method}  {abstract} +render ( paramUiField1 : ch.hslu.cas.msed.blobfish.board.ui.UiField ) : String
}


enum ch.hslu.cas.msed.blobfish.board.ui.SquareColor {
	{field} +DARK
	{field} +LIGHT
}




ch.hslu.cas.msed.blobfish.board.ui.AlphanumericBorderFieldRenderer ..|>  ch.hslu.cas.msed.blobfish.board.ui.BorderFieldRenderer
ch.hslu.cas.msed.blobfish.board.ui.BoardRenderer *--  ch.hslu.cas.msed.blobfish.board.ui.BorderFieldRenderer : borderFieldRenderer
ch.hslu.cas.msed.blobfish.board.ui.BoardRenderer *--  ch.hslu.cas.msed.blobfish.board.ui.FieldRenderer : fieldRenderer
ch.hslu.cas.msed.blobfish.board.ui.ChessBoardRenderer *--  ch.hslu.cas.msed.blobfish.board.ui.BoardRenderer : boardRenderer


@enduml